--- a/frontend/src/pages/homepage/Slider.css
+++ b/frontend/src/pages/homepage/Slider.css
@@ -14,6 +14,7 @@
 .slider-container {
   width: 100%;
   padding: 2rem 0;
+  padding-top: 100px;
 }
 
 .slider-track {
